Interpreter/Examples/bad/example5.jam
/* Wrong number of parameters to function */
main {
vars:
    int f(int x, int y) { return x + y; }
code:
    f(1);
}
